# QKD_benchmark

./: .gitignore  ARCHITECTURE.md  README.md  TODO.md  pyproject.toml
configs/: compare_p1.yaml  demo.yaml
configs/paper_v1/: p1_german7.yaml
docs/: CONTRIBUTING.md
examples/: add_your_algorithm.py  dynamic_admission.py  quickstart.py  relay_placement.py
qkdbench/: __init__.py  cli.py
qkdbench/algorithms/: __init__.py  _common.py  fse_greedy.py  greedy_sp.py  key_aware_sp.py  local_search.py  online.py  placement.py
qkdbench/algorithms/exact/: __init__.py  milp_p1.py
qkdbench/core/: algorithm.py  demand.py  errors.py  instance.py  key_pool.py  network.py  registry.py  result.py  solution.py  verifier.py
qkdbench/evaluation/: aggregate.py  plots.py
qkdbench/instances/: generators.py
qkdbench/keyrate/: finite_size.py
qkdbench/problems/: __init__.py  base.py  constraints.py  decisions.py  dynamic.py  objectives.py  placement.py  presets.py
qkdbench/runner/: benchmark.py  config.py  provenance.py
qkdbench/scenario/: __init__.py  simulator.py
qkdbench/scenario/qkd_models/: __init__.py  base.py  constant.py  decoy_bb84.py  distance.py  finite_size.py
qkdbench/scenario/topology/: __init__.py  base.py  builtin.py  dynamic.py  loaders.py  logical.py  synthetic.py
qkdbench/topology/: builtin.py
qkdbench/validation/: capability.py
tests/: test_algorithms_p1.py  test_benchmark.py  test_core.py  test_dynamic_p2.py  test_evaluation.py  test_network.py  test_placement_p3.py  test_problem_equiv.py  test_qkd_models.py  test_topology.py  test_verifier.py
(+8 files in other folders)
